--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 server.port=8080
 spring.application.name=memody
-spring.profiles.active=init
+spring.profiles.active=default
 
 # ===============================
 # MySQL
