--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,5 @@ logging.level.com.example=DEBUG
 
 spring.servlet.multipart.max-file-size= 10MB
 spring.servlet.multipart.max-request-size=50MB
-image.storage = ${}
-image_storage
+
+GEMINI_API_KEY = ${GEMINI_API_KEY}
